--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
           <img src="./images/hanoi.png" class="img-fluid" style="width: 300px; height: 200px;"
             alt="Hanoi Tower">
           <div class="portfolio-info">
-            <h4><a href="https://shay.github.io/Hanoi-Tower/">Hanoi Tower Puzzle</a></h4>
+            <h4><a href="https://shay.github.io/hanoitower/">Hanoi Tower Puzzle</a></h4>
             <p>This repository contains the Javascript implementation of the Tower of Hanoi exercise.
             </p>
           </div>
           <div class="portfolio-links">
-            <a href="https://github.com/shay-okamura/Hanoi-Tower">GitHub Repository</a>/
-            <a href="https://shay.github.io/Hanoi-Tower/">Live Demo</a>
+            <a href="https://github.com/shay-okamura/hanoitower">GitHub Repository</a>/
+            <a href="https://shay.github.io/hanoitower/">Live Demo</a>
           </div>
         </div>
       </div>
