--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section id="portfolio" class="portfolio section-bg">
         <div class="container">
               <h2> About Me</h2>
-              <p>Hi, My name is Shay and I'm currently enrolled in M.I.T. Professional Certificate in Coding Program. I'm currently working in the Restaurant and Hospitality Industry and trying to expand my horizions and learn a new trade. WHen I'm not working or learning coding I'm out having an adventure with my boy, Kenobi.</p>
+              <p>Hi, My name is Shay and I'm currently enrolled in M.I.T. Professional Certificate in Coding Program. I'm currently working in the Restaurant and Hospitality Industry and trying to expand my horizions and learn a new trade. When I'm not working or learning coding I'm out having an adventure with my boy, Kenobi.</p>
               <center><img src="./images/biopic.jpg" class="img-fluid" style="width: 220px; height: 400px;"
             alt="Kenobi&I"></center>
             
