--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
           <img src="./images/PacMan1.png" class="img-fluid" style="width: 200px; height: 200px;"
             alt="PacMan!">
           <div class="portfolio-info">
-            <h4><a href="https://shay.github.io/PacManProject/">PacMan Factory</a></h4>
+            <h4><a href="https://shay-okamura.github.io/PacManProject/">PacMan Factory</a></h4>
             <p>The task in this exercise is to create a PacMan on demand with button click,
               the created PacMan should start moving at random velocity, and when it hits the edge of screen.</p>
           </div>
           <div class="portfolio-links">
             <a href="https://github.com/shay-okamura/PacManProject">GitHub Repository</a>/
-            <a href="https://shay.github.io/PacManProject/">Live Demo</a>
+            <a href="https://shay-okamura.github.io/PacManProject/">Live Demo</a>
           </div>
         </div>
       </div>
@@ -95,13 +95,13 @@
           <img src="./images/freakyEyes.png" class="img-fluid" style="width: 300px; height: 200px;"
             alt="a pair of unblinking eyes">
           <div class="portfolio-info">
-            <h4><a href="https://shay.github.io/Eye-Movement/">Eyes Movement</a></h4>
+            <h4><a href="https://shay-okamura.github.io/Eye-Movement/">Eyes Movement</a></h4>
             <p>In this assignment we used Javascript to animates these unblinking eyes image to follow movement of mouse
               cursor when it moves across the webpage.</p>
           </div>
           <div class="portfolio-links">
             <a href="https://github.com/shay-okamura/Eye-Movement">GitHub Repository</a>/
-            <a href="https://shay.github.io/Eye-Movement/">Live Demo</a>
+            <a href="https://shay-okamura.github.io/Eye-Movement/">Live Demo</a>
           
           </div>
         </div>
@@ -112,13 +112,13 @@
           <img src="./images/busTracker.png" class="img-fluid" style="width: 300px; height: 200px;"
             alt="Bus Tracker">
           <div class="portfolio-info">
-            <h4><a href="https://shay.github.io/Bus-Tracker/">Real Time Bus Tracker</a></h4>
+            <h4><a href="https://shay-okamura.github.io/Bus-Tracker/">Real Time Bus Tracker</a></h4>
             <p>This real-time bus tracker application fetches live bus data.
             </p>
           </div>
           <div class="portfolio-links">
             <a href="https://github.com/shay-okamura/Bus-Tracker">GitHub Repository</a>/
-            <a href="https://shay.github.io/Bus-Tracker/">Live Demo</a>
+            <a href="https://shay-okamura.github.io/Bus-Tracker/">Live Demo</a>
             
           </div>
         </div>
@@ -129,13 +129,13 @@
           <img src="./images/hanoi.png" class="img-fluid" style="width: 300px; height: 200px;"
             alt="Hanoi Tower">
           <div class="portfolio-info">
-            <h4><a href="https://shay.github.io/hanoitower/">Hanoi Tower Puzzle</a></h4>
+            <h4><a href="https://shay-okamura.github.io/hanoitower/">Hanoi Tower Puzzle</a></h4>
             <p>This repository contains the Javascript implementation of the Tower of Hanoi exercise.
             </p>
           </div>
           <div class="portfolio-links">
             <a href="https://github.com/shay-okamura/hanoitower">GitHub Repository</a>/
-            <a href="https://shay.github.io/hanoitower/">Live Demo</a>
+            <a href="https://shay-okamura.github.io/hanoitower/">Live Demo</a>
           </div>
         </div>
       </div>
