--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
           <img src="./images/PacMan1.png" class="img-fluid" style="width: 200px; height: 200px;"
             alt="PacMan!">
           <div class="portfolio-info">
-            <h4><a href="https://shay-okamura.github.io/PacManProject/">PacMan Factory</a></h4>
+            <h4><a href="https://shay-okamura.github.io/pacman/">PacMan Factory</a></h4>
             <p>The task in this exercise is to create a PacMan on demand with button click,
               the created PacMan should start moving at random velocity, and when it hits the edge of screen.</p>
           </div>
           <div class="portfolio-links">
-            <a href="https://github.com/shay-okamura/PacManProject">GitHub Repository</a>/
-            <a href="https://shay-okamura.github.io/PacManProject/">Live Demo</a>
+            <a href="https://github.com/shay-okamura/pacman">GitHub Repository</a>/
+            <a href="https://shay-okamura.github.io/pacman/">Live Demo</a>
           </div>
         </div>
       </div>
