--- a/index.html
+++ b/index.html
@@ -139,7 +139,22 @@
           </div>
         </div>
       </div>
-
+        
+ <div class="col-lg-4 col-md-6 portfolio-item">
+        <div class="portfolio-wrap">
+          <img src="./images/bank.png" class="img-fluid" style="width: 300px; height: 200px;"
+            alt="bank">
+          <div class="portfolio-info">
+            <h4><a href="https://shay-okamura.github.io/FrontEndBank/">Front End Banking</a></h4>
+            <p></p>
+          </div>
+          <div class="portfolio-links">
+            <a href="https://github.com/shay-okamura/FrontEndBank">GitHub Repository</a>/
+            <a href="https://shay-okamura.github.io/FrontEndBank/">Live Demo</a>
+          
+          </div>
+        </div>
+      </div>
 <div class="video-container">
 <iframe width="420" height="315" src="https://www.youtube.com/embed/LIuqSpH79ys">
 </iframe>
